# Sales_Analytics

./: AnalyticsEngine.cpp  AnalyticsEngine.h  CMakeLists.txt  ProductTracker.cpp  ProductTracker.h  SalesStreamSimulator.cpp  SalesStreamSimulator.h  SlidingWindow.cpp  SlidingWindow.h  main.cpp  sales_log.csv
